# utils

./: CMakeLists.txt  build.sh  conanfile.txt  first.cxx  first.h  log.cxx  log.h  main.cxx
Testing/gtest/: CMakeLists.txt  utils.cxx
log-stream/: CMakeLists.txt  qdebugstream.cxx  qdebugstream.h
utils/: CMakeLists.txt  first.cxx  log.cxx  log.h
utils/Testing/gtest/: CMakeLists.txt  utils_test.cxx
